kubeBakeryDeploy/webapp/bakery_web_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kakey1
  name: kakey1-web-deployment
  labels:
    app: kakey1-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kakey1-web
  template:
    metadata:
      labels:
        app: kakey1-web
    spec:
      containers:
      - name: kakey1-web
        image: 144.17.92.12:5000/kakey1/kakey1-web:$GITHUB_RUN_ID
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
