kubeBakeryDeploy/webapp/bakery_web_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kakey1
  name: kakey1-web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kakey-kube.duckdns.org 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kakey1-web-service
            port:
              number: 80
